compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__let_assert__string_prefix_pattern.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/let_assert.rs
assertion_line: 195
expression: "pub fn go() {\n  let assert \"Hello \" <> name = \"Hello John\"\n  name\n}"
snapshot_kind: text
---
----- SOURCE CODE
pub fn go() {
  let assert "Hello " <> name = "Hello John"
  name
}

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([go/0]).

-file("project/test/my/mod.gleam", 1).
-spec go() -> binary().
go() ->
    Name@1 = case <<"Hello John"/utf8>> of
        <<"Hello "/utf8, Name/binary>> -> Name;
        _assert_fail ->
            erlang:error(#{gleam_error => let_assert,
                        message => <<"Pattern match failed, no pattern matched the value."/utf8>>,
                        file => <<?FILEPATH/utf8>>,
                        module => <<"my/mod"/utf8>>,
                        function => <<"go"/utf8>>,
                        line => 2,
                        value => _assert_fail,
                        start => 16,
                        'end' => 58,
                        pattern_start => 27,
                        pattern_end => 43})
    end,
    Name@1.
